force-app/main/default/objects/PorcelanosaAddress__c/PorcelanosaAddress__c.object-meta.xml
<CustomObject>
    <label>Porcelanosa Address</label>
    <nameField>
        <label>Porcelanosa Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Porcelanosa Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>