force-app/main/default/objects/PorcelanosaAddress__c/fields/BreakHours__c.field-meta.xml
<CustomField>
    <fullName>BreakHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business hours que recoge las horas de cierre de la tienda</description>
    <label>Break Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Porcelanosa_Address_break</relationshipName>
    <type>Lookup</type>
</CustomField>