force-app/main/default/objects/PorcelanosaAddress__c/fields/CustomerPickupHours__c.field-meta.xml
<CustomField>
    <fullName>CustomerPickupHours__c</fullName>
    <label>Customer Pickup Hours</label>
    <type>TextArea</type>
</CustomField>