force-app/main/default/objects/PorcelanosaAddress__c/fields/CutoffTime__c.field-meta.xml
<CustomField>
    <fullName>CutoffTime__c</fullName>
    <label>Cut-off Time</label>
    <type>Time</type>
</CustomField>