force-app/main/default/objects/PorcelanosaAddress__c/fields/NB2B_States__c.field-meta.xml
<CustomField>
    <fullName>NB2B_States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>District of Columbia</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Virginia</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
                <isActive>false</isActive>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>Alaska</fullName>
                <isActive>false</isActive>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>Arizona</fullName>
                <isActive>false</isActive>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>Arkansas</fullName>
                <isActive>false</isActive>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>Delaware</fullName>
                <isActive>false</isActive>
                <label>Delaware</label>
            </value>
            <value>
                <fullName>Hawái</fullName>
                <isActive>false</isActive>
                <label>Hawái</label>
            </value>
            <value>
                <fullName>Idaho</fullName>
                <isActive>false</isActive>
                <label>Idaho</label>
            </value>
            <value>
                <fullName>Indiana</fullName>
                <isActive>false</isActive>
                <label>Indiana</label>
            </value>
            <value>
                <fullName>Iowa</fullName>
                <isActive>false</isActive>
                <label>Iowa</label>
            </value>
            <value>
                <fullName>Kansas</fullName>
                <isActive>false</isActive>
                <label>Kansas</label>
            </value>
            <value>
                <fullName>Kentucky</fullName>
                <isActive>false</isActive>
                <label>Kentucky</label>
            </value>
            <value>
                <fullName>Luisiana</fullName>
                <isActive>false</isActive>
                <label>Luisiana</label>
            </value>
            <value>
                <fullName>Maine</fullName>
                <isActive>false</isActive>
                <label>Maine</label>
            </value>
            <value>
                <fullName>Michigan</fullName>
                <isActive>false</isActive>
                <label>Michigan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>