force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Address__c.field-meta.xml
<CustomField>
    <fullName>NBK_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>