force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>NBK_Address_Type__c</fullName>
    <description>ASddresss Type</description>
    <label>Address Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Showroom</fullName>
                <label>Showroom2</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
                <label>Warehouse2</label>
            </value>
            <value>
                <fullName>Ships Samples</fullName>
                <label>Ships Samples2</label>
            </value>
            <value>
                <fullName>Collection Point</fullName>
                <label>Collection Point2</label>
            </value>
            <value>
                <fullName>B2B-Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>