force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_AllShowrooms__c.field-meta.xml
<CustomField>
    <fullName>NBK_AllShowrooms__c</fullName>
    <label>All Showrooms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NB2B_States__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anaheim - 1301 South State College Boulevard - CA</fullName>
                <isActive>false</isActive>
                <label>Anaheim - 1301 South State College Boulevard - CA</label>
            </value>
            <value>
                <fullName>Anaheim - 1301 South State College Boulevard Suite E - CA</fullName>
            </value>
            <value>
                <fullName>Atlanta, Buckhead Square - 3255 Peachtree Road Northeast - GA</fullName>
                <isActive>false</isActive>
                <label>Atlanta, Buckhead Square - 3255 Peachtree Road Northeast - GA</label>
            </value>
            <value>
                <fullName>Atlanta - 3255 Peachtree Road NE Suite B - GA</fullName>
            </value>
            <value>
                <fullName>Austin - 1000 East 50th Street - TX</fullName>
            </value>
            <value>
                <fullName>Boston, Boston Design Center - 17 Drydock Avenue - MA</fullName>
            </value>
            <value>
                <fullName>Brooklyn – Industry City - 33 35th Street Suite A-101 - NY</fullName>
            </value>
            <value>
                <fullName>Chestnut Hill at The Street - 55 Boylston Street - MA</fullName>
            </value>
            <value>
                <fullName>Chicago, Luxe Home at the Merchandise Mart - 222 West Merchandise Mart Plaza - IL</fullName>
            </value>
            <value>
                <fullName>Chicago (Lincoln Park) - 1001 West North Avenue - IL</fullName>
            </value>
            <value>
                <fullName>CUSTOMER COLLECTS BRISTOL WAREHOUSE - Lysander Road - BL</fullName>
            </value>
            <value>
                <fullName>CUSTOMER COLLECTS MARSTON GREEN - Starley Way - WM,CUSTOMER COLLECTIONS BRAEHEAD - 2 Rocep Drive - RE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER COLLECTS WATFORD - Otterspool Way - HT,CUSTOMER COLLECTS WARRINGTON - 850 Europa Boulevard, westbrook - CH</fullName>
            </value>
            <value>
                <fullName>Dallas – Emerald Street - 11639 Emerald Street - TX</fullName>
            </value>
            <value>
                <fullName>Dallas – Hi Line Drive Decorative Design Center - 1617 Hi Line Drive - TX</fullName>
            </value>
            <value>
                <fullName>Denver - 601 South Broadway Suite A - CO</fullName>
            </value>
            <value>
                <fullName>Denver Denver Design District - 601 South Broadway - CO</fullName>
                <isActive>false</isActive>
                <label>Denver Denver Design District - 601 South Broadway - CO</label>
            </value>
            <value>
                <fullName>East Brunswick - 252 New Jersey 18 - NJ</fullName>
            </value>
            <value>
                <fullName>Houston - 4006 Richmond Avenue - TX</fullName>
            </value>
            <value>
                <fullName>King Of Prussia - 645 West Dekalb Pike - PA</fullName>
            </value>
            <value>
                <fullName>Manhattan FLAGSHIP SHOWROOM - 202 5th Avenue - NY</fullName>
            </value>
            <value>
                <fullName>Miami - 8700 N.W. 13th Terrace - FL</fullName>
            </value>
            <value>
                <fullName>Miami - 8700 Northwest 13th Terrace - FL</fullName>
                <isActive>false</isActive>
                <label>Miami - 8700 Northwest 13th Terrace - FL</label>
            </value>
            <value>
                <fullName>Miami Design District - 3705 Biscayne Boulevard - FL</fullName>
            </value>
            <value>
                <fullName>North Bethesda - 11500 Rockville Pike - MD</fullName>
            </value>
            <value>
                <fullName>Paramus - New Jersey 17 - NJ</fullName>
            </value>
            <value>
                <fullName>Pompano Beach - 3400 North Powerline Road - FL</fullName>
            </value>
            <value>
                <fullName>Pompano Beach - 3400 North Powerline Road Pompano - FL</fullName>
            </value>
            <value>
                <fullName>Montreal, Quebec - 6090 Chemin de la Côte-Saint-Luc - QC</fullName>
                <label>Quebec - 6090 Chemin de la Côte-Saint-Luc - QC</label>
            </value>
            <value>
                <fullName>Ramsey - Corporate - 600 NJ-17 - NJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>