force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Appointment_type__c.field-meta.xml
<CustomField>
    <fullName>NBK_Appointment_type__c</fullName>
    <description>This field only use in AppointmentManager flow</description>
    <label>Appointment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>