force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>NBK_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Porcelanosa_Address</relationshipName>
    <type>Lookup</type>
</CustomField>