force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_CustomerProfile__c.field-meta.xml
<CustomField>
    <fullName>NBK_CustomerProfile__c</fullName>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Fabricator</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Architect,</fullName>
                <isActive>false</isActive>
                <label>Architect,</label>
            </value>
            <value>
                <fullName>Builder,</fullName>
                <isActive>false</isActive>
                <label>Builder,</label>
            </value>
            <value>
                <fullName>Consumer,</fullName>
                <isActive>false</isActive>
                <label>Consumer,</label>
            </value>
            <value>
                <fullName>Contractor,</fullName>
                <isActive>false</isActive>
                <label>Contractor,</label>
            </value>
            <value>
                <fullName>Dealer,</fullName>
                <isActive>false</isActive>
                <label>Dealer,</label>
            </value>
            <value>
                <fullName>Designer,</fullName>
                <isActive>false</isActive>
                <label>Designer,</label>
            </value>
            <value>
                <fullName>Fabricator,</fullName>
                <isActive>false</isActive>
                <label>Fabricator,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>