force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_GeolocationShowroom__c.field-meta.xml
<CustomField>
    <fullName>NBK_GeolocationShowroom__c</fullName>
    <label>Geolocation Showroom</label>
    <type>Url</type>
</CustomField>