force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_GoToMaps__c.field-meta.xml
<CustomField>
    <fullName>NBK_GoToMaps__c</fullName>
    <label>Go To Maps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>