force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_isActive__c.field-meta.xml
<CustomField>
    <fullName>NBK_isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>