force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_isWarehouse__c.field-meta.xml
<CustomField>
    <fullName>NBK_isWarehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWarehouse</label>
    <type>Checkbox</type>
</CustomField>