force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_LinkToShowroom__c.field-meta.xml
<CustomField>
    <fullName>NBK_LinkToShowroom__c</fullName>
    <label>Link To Showroom</label>
    <type>Url</type>
</CustomField>