force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_minDeliveryDays__c.field-meta.xml
<CustomField>
    <fullName>NBK_minDeliveryDays__c</fullName>
    <label>Min Delivery Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>