force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Name_with_adress__c.field-meta.xml
<CustomField>
    <fullName>NBK_Name_with_adress__c</fullName>
    <formula>Name &amp;&quot; - &quot;&amp; NBK_Address__Street__s &amp;&quot; - &quot;&amp; TEXT(NBK_Address__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name with adress</label>
    <type>Text</type>
</CustomField>