force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_OnlineAppointment__c.field-meta.xml
<CustomField>
    <fullName>NBK_OnlineAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Appointments</label>
    <type>Checkbox</type>
</CustomField>