force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_ownAddress__c.field-meta.xml
<CustomField>
    <fullName>NBK_ownAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ownAddress</label>
    <type>Checkbox</type>
</CustomField>