force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Phone__c.field-meta.xml
<CustomField>
    <fullName>NBK_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>