force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Products__c.field-meta.xml
<CustomField>
    <fullName>NBK_Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Natural Stone</fullName>
            </value>
            <value>
                <fullName>Mosaics</fullName>
            </value>
            <value>
                <fullName>Hardwood-Laminate-LVT</fullName>
            </value>
            <value>
                <fullName>Baths</fullName>
            </value>
            <value>
                <fullName>Kitchens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>