force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>NBK_Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Porcelanosa Address</relationshipLabel>
    <relationshipName>Porcelanosa_Address</relationshipName>
    <type>Lookup</type>
</CustomField>