force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>NBK_SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>SALES_OFFICE__c</referenceTo>
    <relationshipLabel>Porcelanosa Address</relationshipLabel>
    <relationshipName>Porcelanosa_Address</relationshipName>
    <type>Lookup</type>
</CustomField>