force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_SAPId__c.field-meta.xml
<CustomField>
    <fullName>NBK_SAPId__c</fullName>
    <label>SAP Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>