force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_Showroom_Email__c.field-meta.xml
<CustomField>
    <fullName>NBK_Showroom_Email__c</fullName>
    <label>Showroom Email</label>
    <type>Email</type>
</CustomField>