force-app/main/default/objects/PorcelanosaAddress__c/fields/NBK_ShowroomImage__c.field-meta.xml
<CustomField>
    <fullName>NBK_ShowroomImage__c</fullName>
    <label>Showroom image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>