force-app/main/default/objects/PorcelanosaAddress__c/fields/PreparationDays__c.field-meta.xml
<CustomField>
    <fullName>PreparationDays__c</fullName>
    <label>Preparation Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>