force-app/main/default/objects/PorcelanosaAddress__c/fields/SAPSalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SAPSalesOffice__c</fullName>
    <label>SAPSalesOffice</label>
    <length>4</length>
    <type>Text</type>
</CustomField>