force-app/main/default/objects/PorcelanosaAddress__c/fields/SAPSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SAPSalesOrg__c</fullName>
    <label>SAPSalesOrg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>