force-app/main/default/objects/PorcelanosaAddress__c/fields/XXXXXXNBK_minDeliveryDays__c.field-meta.xml
<CustomField>
    <fullName>XXXXXXNBK_minDeliveryDays__c</fullName>
    <label>XXXXXMin Delivery Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>