force-app/main/default/objects/PorcelanosaAddress__c/validationRules/NBK_Showrrom_Salesoffice.validationRule-meta.xml
<ValidationRule>
    <fullName>NBK_Showrrom_Salesoffice</fullName>
    <active>false</active>
    <errorConditionFormula>INCLUDES(NBK_Address_Type__c, &apos;Showroom&apos;)
&amp;&amp;
NBK_SalesOffice__c &lt;&gt; null</errorConditionFormula>
    <errorMessage>If you select Showroom Type, it&apos;s necesary select a Sales Office asociate.</errorMessage>
</ValidationRule>