force-app/main/default/objects/PorcelanosaAddress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SAPSalesOrg__c</columns>
    <columns>NAME</columns>
    <columns>NBK_OnlineAppointment__c</columns>
    <columns>NBK_Appointment_type__c</columns>
    <columns>NBK_isActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NBK_SalesOffice__c</columns>
    <columns>NBK_Address__City__s</columns>
    <columns>NBK_Address__CountryCode__s</columns>
    <columns>NBK_Address__StateCode__s</columns>
    <columns>NBK_Address__Street__s</columns>
    <columns>NBK_Address__PostalCode__s</columns>
    <columns>NBK_isWarehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>